Bug 630373 - Input "Download Beta" page has weird empty-space to both sides, creating unnecessary horizontal scrollbar

--- a/media/css/reporter.css
+++ b/media/css/reporter.css
@@ -12,7 +12,7 @@ body {
 /* background fix: bug 574031 */
 body,
 header .stripe {
-    min-width: 1100px;
+    min-width: 950px;
 }
 
 #nav-access {
